Bug 204631 - ALSA: usb-audio: implicit fb quirk for Behringer UFX1604
Summary: ALSA: usb-audio: implicit fb quirk for Behringer UFX1604
Status: RESOLVED CODE_FIX
Alias: None
Product: Drivers
Classification: Unclassified
Component: Sound(ALSA) (show other bugs)
Hardware: All Linux
: P1 normal
Assignee: Jaroslav Kysela
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-08-19 22:20 UTC by senderberlin
Modified: 2022-05-02 21:59 UTC (History)
2 users (show)

See Also:
Kernel Version: 4.19
Subsystem:
Regression: No
Bisected commit-id:


Attachments

Description senderberlin 2019-08-19 22:20:56 UTC
Behringer UFX1604 playback (snd-usb-audio) pops, clicks.
--------------------------------------------------------

Workaround:

in /linux/sound/usb/pcm.c in line 342:

```
case USB_ID(0x1397, 0x0002): /* Behringer UFX1204 */
        ep = 0x81;
        ifnum = 1;
        goto add_sync_ep_from_ifnum;
```
needs to be:

```
case USB_ID(0x1397, 0x0002): /* Behringer UFX1204 */
case USB_ID(0x1397, 0x0001): /* Behringer UFX1604 */
        ep = 0x81;
        ifnum = 1;
        goto add_sync_ep_from_ifnum;
```
for Behringer UFX1604

Tested with new compiled snd-usb-audio.ko. Playback ok without clicks.

relates to commit: 

https://github.com/torvalds/linux/commit/5e35dc0338d85ccebacf3f77eca1e5dea73155e8#diff-bb3848ab95be1b898fb7f15d8beae70c
Comment 1 Takashi Iwai 2019-08-20 07:01:42 UTC
Thanks, now I submitted the patch to upstream and will merge it soon later.

Note You need to log in before you can comment on or make changes to this bug.